tests/idris2/error005/expected
1/1: Building IfErr (IfErr.idr)
Error: While processing right hand side of foo. Can't find an implementation for Eq a.

IfErr.idr:4:11--4:17
   |
 4 | foo x y = x == y
   |           ^^^^^^

Error: While processing right hand side of bar. Can't find an implementation for Eq Wibble.

IfErr.idr:7:11--7:17
   |
 7 | bar x y = x == y
   |           ^^^^^^

